--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mongoose": "^6.0.7"
   },
-  "name": "express_introduction",
-  "version": "1.0.0",
-  "main": "index.js",
-  "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "server":"nodemon server"
+    "start": "node server.js",
+    "server": "nodemon server"
   },
+  "name": "express",
+  "version": "1.0.0",
+  "main": "server.js",
   "keywords": [],
   "author": "",
   "license": "ISC",
